Fix floating actions sizing on mobile

--- a/src/assets/sass/_floating.scss
+++ b/src/assets/sass/_floating.scss
@@ -24,9 +24,10 @@
   .floating-actions {
     display: flex;
     gap: 0.5rem;
+    width: 100%;
 
     & > button {
-      flex-shrink: 1;
+      flex: 1 1 auto;
       text-align: center;
     }
   }
